# rust_ros2_demo_ws

./: .gitignore  README.md  setup_distro.ps1  setup_git_user.sh  setup_ros2_jazzy.sh  setup_rust.sh
src/rust_publisher/: CMakeLists.txt  Cargo.toml  package.xml
src/rust_publisher/src/: main.rs
src/rust_subscriber/: CMakeLists.txt  Cargo.toml  package.xml
src/rust_subscriber/src/: main.rs
